alignment fixes

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -277,17 +277,17 @@
 
 @media (max-width: 768px) {
   .card {
-    width: 85%;
+    width: 100%;
   }
   .team__section .photo img {
     filter: grayscale(0) contrast(1);
   }
+  .team__section .teamCards__container:hover img {
+    transform: scale(1);
+  }
 }
 
 @media (max-width: 370px) {
-  .card {
-    width: 95%;
-  }
   .team__header {
     font-size: 2.25rem;
     line-height: 1;
